--- a/index.html
+++ b/index.html
@@ -308,5 +308,6 @@ canvas.addEventListener('mousemove', function (e) {
 });
       //# sourceURL=pen.js
     </script>
+    <a style="possition: absolute; top: 100%; left: 0; text-decoration: none; color: lightblue; font-size: 30;" href="about.html">About page</a>
   </body>
 </html>
