--- a/index.html
+++ b/index.html
@@ -308,6 +308,6 @@ canvas.addEventListener('mousemove', function (e) {
 });
       //# sourceURL=pen.js
     </script>
-    <a style="possition: absolute; top: 100%; left: 0; text-decoration: none; color: lightblue; font-size: 30;" href="about.html">About page</a>
+    <a style="position: absolute; z-index: -1; top: 99%; left: 0; text-decoration: none; color: lightblue; font-size: 30;" href="about.html">About page</a>
   </body>
 </html>
