--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         overflow: hidden;
       }
       canvas{
-        background-color: #002;
+        background-color: #0ecc0e;
       }
     </style>
   </head>
