--- a/particles.html
+++ b/particles.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="style.css" rel="stylesheet"></link>
+    <link href="particles.css" rel="stylesheet"></link>
   </head>
   <body>
     
@@ -9,7 +9,7 @@
     Your Browser Don't Support Canvas, Please Download Chrome ^_^``
     </canvas>
     <script src="cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="main.js"></script>
+    <script src="particles.js"></script>
 
 </body>
 </html>
