--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
   <body>
     <div class="navbar">
       <a href="particles.html">Reactive particles</a>
+      <br/>
       <a href="#">Coming soon</a>
+      <br/>
       <a href="#">Coming soon</a>
+      <br/>
+    </div>
+    <div class="main">
+      <div class="title">Welcome to the offical website of Edaz Potato!</div>
+      <br/>
+      <div class="content"></div>
     </div>
   </body>
 </html>
