--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       <div class="title">Welcome to the offical website of Edaz Potato!</div>
       <br/>
       <div class="content"></div>
+      <--! Subscribe button -->
+      <script src="https://apis.google.com/js/platform.js"></script>
+      <div class="g-ytsubscribe" data-channelid="UCK1ME1J0XNbN31bCOV9UjKw" data-layout="full" data-count="default"></div>
+      <br/>
     </div>
   </body>
 </html>
