--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="Itr">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="Description" content="Edaz Potato's offical website!">
-    <title>EdazPotato's offical GITHUB site</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-  <link rel="stylesheet" href="homepage-style.css" type="text/css">
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+      <meta name="viewport" content="width=device-width,initial-scale=1">
+      <title>Edaz Potato</title>
+      <link rel="stylesheet" href="./style.css" type="text/css"/>
+      <!--<script defer src="/assets/fontawsome/js/all.js"></script>-->
+      <script src="https://kit.fontawesome.com/1d95bbfa9b.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="navbar">
-      <a href="particles.html">Reactive particles</a>
-      <br/>
-      <a href="#">Coming soon</a>
-      <br/>
-      <a href="#">Coming soon</a>
-      <br/>
-    </div>
-    <div class="main">
-      <div class="title">Welcome to the offical website of Edaz Potato!</div>
-      <br/>
-      <div class="content"></div>
-      <!-- Subscribe button -->
-      <script src="https://apis.google.com/js/platform.js"></script>
-      <div class="g-ytsubscribe" data-channelid="UCK1ME1J0XNbN31bCOV9UjKw" data-layout="full" data-count="default"></div>
-      <br/>
+    <div class="card middle">
+        <div class="front">
+            <img  src="assets/images/edazpotato.jpg" alt="Edaz Potato image"/>
+        </div>
+        <div class="back">
+            <div class="back-content middle">
+                <h2>Edaz Potato</h2>
+                <span>Youtuber</span>
+                <div class="sm">
+                    <a href="https://www.twitter.com/EdazPotato" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.youtube.com/channel/UCK1ME1J0XNbN31bCOV9UjKw" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.github.com/EdazPotato" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://discord.gg/tG2Q333" target="_blank"><i class="fab fa-discord"></i></a>
+                </div>
+            </div>
+        </div>
     </div>
   </body>
 </html>
