--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="card middle">
         <div class="front">
-            <img  src="assets/images/edazpotato.jpg" alt="Edaz Potato image"/>
+            <img  src="assets/images/edazpotato.png" alt="Edaz Potato image"/>
         </div>
         <div class="back">
             <div class="back-content middle">
