--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
       <meta name="viewport" content="width=device-width,initial-scale=1">
       <title>Edaz Potato</title>
       <link rel="stylesheet" href="./style.css" type="text/css"/>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
       <!--<script defer src="/assets/fontawsome/js/all.js"></script>-->
       <script src="https://kit.fontawesome.com/1d95bbfa9b.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="card middle">
+    <div class="card middle animated bounceInDown">
         <div class="front">
             <img  src="assets/images/edazpotato.png" alt="Edaz Potato image"/>
         </div>
