--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <script src="https://kit.fontawesome.com/1d95bbfa9b.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="card middle animated bounceInDown">
+    <div class="card middle animated pulse">
         <div class="front">
             <img  src="assets/images/edazpotato.png" alt="Edaz Potato image"/>
         </div>
