--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       <script src="https://kit.fontawesome.com/1d95bbfa9b.js" crossorigin="anonymous"></script>
   </head>
   <body>
+    <div class="header banner midddle animated tada">
+      Check out NASA's cool image of the day at <a href="/NASA">EdazPotato.js.org/NASA</a>
+    </div>
     <div class="card middle">
         <div class="front">
             <img  src="assets/images/edazpotato.png" alt="Edaz Potato image"/>
