--- a/NASA/index.html
+++ b/NASA/index.html
@@ -10,9 +10,9 @@
   </head>
   <body>
 	  <a href="/">Home</a>
-	<h1 id="titleSpace"></h1>
+	<h1 id="titleSpace">Loading...</h1>
 	<br/>
 	<img src="" alt="Nasa daily sapce image" id="dailyImg"/>
-	<p id="desc"></p>
+	<p id="desc">Loading description and image...</p>
   </body>
 </html>
