--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <div class="header banner midddle animated tada">
       Check out NASA's cool image of the day at <a href="/NASA">EdazPotato.js.org/NASA</a>
     </div>
+    <div class="topnav">
+      <a class="active" href="/">Home</a>
+      <a href="/NASA">Pictures from NASA</a>
+      <a href="/MEMES">MEMEs from REDDIT!</a>
+    </div>
     <div class="card middle">
         <div class="front">
             <img  src="assets/images/edazpotato.png" alt="Edaz Potato image"/>
