--- a/MEMES/index.html
+++ b/MEMES/index.html
@@ -2,11 +2,18 @@
 <html>
   <head>
     <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>title</title>
-  <link rel="stylesheet" href="style.css" type="text/css">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Memes!</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <script src="main.js"></script>
   </head>
   <body>
+    <h1 id="titleSpace">Loading...</h1>
+    <br/>
+    <img src="" id="memeImg" alt="Meme image"/>
+    <br/>
+    <span id="credit">Loading</span>
+    <a href="" id="postLink">Click to view original post</a>
   </body>
 </html>
