--- a/MEMES/index.html
+++ b/MEMES/index.html
@@ -9,6 +9,11 @@
     <script src="main.js"></script>
   </head>
   <body>
+    <div class="topnav">
+      <ahref="/">Home</a>
+      <a href="/NASA">Pictures from NASA</a>
+      <a href="/MEMES" class="active">MEMEs from REDDIT!</a>
+    </div>
     <h1 id="titleSpace">Loading...</h1>
     <br/>
     <img src="" id="memeImg" alt="Meme image"/>
