--- a/NASA/index.html
+++ b/NASA/index.html
@@ -9,7 +9,11 @@
   <script src="main.js"></script>
   </head>
   <body>
-	  <a href="/">Home</a>
+	<div class="topnav">
+     	 <a href="/">Home</a>
+      	 <a href="/NASA"  class="active">Pictures from NASA</a>
+      	 <a href="/MEMES">MEMEs from REDDIT!</a>
+	</div>
 	<h1 id="titleSpace">Loading...</h1>
 	<br/>
 	<img src="" alt="Nasa daily sapce image" id="dailyImg"/>
