--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
       <script src="https://kit.fontawesome.com/1d95bbfa9b.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="header banner midddle animated tada">
-      Check out NASA's cool image of the day at <a href="/NASA">EdazPotato.js.org/NASA</a>
-    </div>
     <div class="topnav">
       <a class="active" href="/">Home</a>
       <a href="/NASA">Pictures from NASA</a>
@@ -35,6 +32,12 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="footer banner midddle animated tada">
+      Check out NASA's cool image of the day at <a href="/NASA">EdazPotato.js.org/NASA</a>
+    </div>
+    <div class="footer banner midddle animated tada">
+      Check out some randome MEMEs <a href="/MEMES">EdazPotato.js.org/MEMES</a>
     </div>
   </body>
 </html>
