--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a class="active" href="/">Home</a>
       <a href="/NASA">Pictures from NASA</a>
       <a href="/MEMES">MEMEs from REDDIT!</a>
+      <a href="/resume">Resume</a>
     </div>
     <div class="card middle">
         <div class="front">
