--- a/NASA/index.html
+++ b/NASA/index.html
@@ -14,6 +14,7 @@
      	 <a href="/">Home</a>
       	 <a href="/NASA"  class="active">Pictures from NASA</a>
       	 <a href="/MEMES">MEMEs from REDDIT!</a>
+	 <a href="/resume">Resume</a>
 	</div>
 	<h1 id="titleSpace">Loading...</h1>
 	<br/>
