--- a/MEMES/index.html
+++ b/MEMES/index.html
@@ -14,7 +14,7 @@
       <a href="/">Home</a>
       <a href="/NASA">Pictures from NASA</a>
       <a href="/MEMES" class="active">MEMEs from REDDIT!</a>
-      <a href="/resume">Resume</a>
+      <a href="/CATS">Cats</a>
     </div>
     <h1 id="titleSpace">Loading...</h1>
     <br/>
