--- a/CATS/index.html
+++ b/CATS/index.html
@@ -18,7 +18,7 @@
 	</div>
 	<h1 id="titleSpace">Loading...</h1>
 	<br/>
-	<img src="" alt="Nasa daily sapce image" id="Img"/>
+	<img src="" alt="image" id="Img"/>
 	<p id="desc">Loading description and image...</p>
   </body>
 </html>
