--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <a href="/NASA">Pictures from NASA</a>
       <a href="/MEMES">MEMEs from REDDIT!</a>
       <a href="/CATS">Cats</a>
+      <a href="/XKCD">Todays XKCD</a>
     </div>
     <div class="card middle">
         <div class="front">
