--- a/XKCD/index.html
+++ b/XKCD/index.html
@@ -9,6 +9,13 @@
     <script src="main.js"></script>
   </head>
   <body>
+    <div class="topnav">
+      <a href="/">Home</a>
+      <a href="/NASA">Pictures from NASA</a>
+      <a href="/MEMES">MEMEs from REDDIT!</a>
+      <a href="/CATS">Cats</a>
+      <a class="active" href="/XKCD">Todays XKCD</a>
+    </div>
     <h1 id="titleSpace">Loading todays XKCD</h1>
     <br/>
     <img src="" id="Img" alt="Loading from xkcd.com..."/>
