--- a/CATS/index.html
+++ b/CATS/index.html
@@ -15,6 +15,7 @@
       	 <a href="/NASA"  class="active">Pictures from NASA</a>
       	 <a href="/MEMES">MEMEs from REDDIT!</a>
 	 <a href="/CATS">Cats</a>
+	 <a href="/XKCD">Todays XKCD</a>
 	</div>
 	<h1 id="titleSpace">Loading...</h1>
 	<br/>
