--- a/CATS/index.html
+++ b/CATS/index.html
@@ -19,7 +19,6 @@
 	</div>
 	<h1 id="titleSpace">Loading...</h1>
 	<br/>
-	<img src="" alt="image" id="Img"/>
-	<p id="desc">Loading description and image...</p>
+	<img src="" alt="cat" id="Img"/>
   </body>
 </html>
