--- a/NASA/HD.html
+++ b/NASA/HD.html
@@ -17,10 +17,10 @@
 	 <a href="/CATS">Cats</a>
 	 <a href="/XKCD">Todays XKCD</a>
 	</div>
-  <a href="/NASA">Veiw normal quality image</a><br/>
 	<h1 id="titleSpace">Loading HD image...</h1>
 	<br/>
 	<img src="" alt="Nasa daily sapce image" id="dailyImg"/>
 	<p id="desc">Loading description and HD image...</p>
+	<a href="/NASA">Veiw normal quality media</a><br/>
   </body>
 </html>
