--- a/NASA/HD.html
+++ b/NASA/HD.html
@@ -21,6 +21,6 @@
 	<br/>
 	<img src="" alt="Nasa daily sapce image" id="dailyImg"/>
 	<p id="desc">Loading description and HD image...</p>
-	<a href="/NASA">Veiw normal quality media</a><br/>
+	<br/><a href="/NASA">Veiw normal quality media</a>
   </body>
 </html>
