Add max-height and update button

--- a/MEMES/index.html
+++ b/MEMES/index.html
@@ -18,8 +18,9 @@
       <a href="/XKCD">Todays XKCD</a>
     </div>
     <h1 id="titleSpace">Loading...</h1>
+    <button onclick="updateElements()">Another!</button>
     <br/>
-    <img src="" id="memeImg" alt="Meme image"/>
+    <img src="" id="memeImg" alt="Meme image" style="max-height: 450px"/>
     <br/>
     <span id="credit">Loading</span>
     <a href="" id="postLink">Click to view original post</a>
