make update button work

--- a/MEMES/index.html
+++ b/MEMES/index.html
@@ -18,7 +18,7 @@
       <a href="/XKCD">Todays XKCD</a>
     </div>
     <h1 id="titleSpace">Loading...</h1>
-    <button onclick="updateElements()">Another!</button>
+    <button onclick="loadAndUpdate()">Another!</button>
     <br/>
     <img src="" id="memeImg" alt="Meme image" style="max-height: 450px"/>
     <br/>
