--- a/SPACEX/index.html
+++ b/SPACEX/index.html
@@ -6,6 +6,7 @@
     <title>Next SPACEX launch</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <script src="main.js"></script>
+    <script src="./js/get.js"></script>
   </head>
   <body>
      
