--- a/SPACEX/index.html
+++ b/SPACEX/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Next SPACEX launch</title>
     <link rel="stylesheet" href="style.css" type="text/css">
-    <script src="main.js"></script>
+    <script defer src="main.js"></script>
     <script src="./js/get.js"></script>
   </head>
   <body>
