--- a/SPACEX/index.html
+++ b/SPACEX/index.html
@@ -9,6 +9,10 @@
     <script src="/js/get.js"></script>
   </head>
   <body>
-     
+    <h1>Launch number: <span id="launchNumber"></span></h1>
+    <br/>
+    <h2>Launch site: <span id="launchSiteName"></span</h2>
+    <br/>
+    <h2>Predicted launch date: <span id="flightDate"></span></h2>
   </body>
 </html>
