--- a/SPACEX/index.html
+++ b/SPACEX/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Next SPACEX launch</title>
     <link rel="stylesheet" href="style.css" type="text/css">
-    <script defer src="main.js"></script>
+    <link rel="stylesheet" href="/css/navbar.css" type="text/css">
+    <script src="main.js"></script>
     <script src="/js/get.js"></script>
+    <script src="/js/navbar.js"></script>
   </head>
   <body>
     <h1>Launch number: <span id="launchNumber"></span></h1>
