--- a/SPACEX/index.html
+++ b/SPACEX/index.html
@@ -11,6 +11,8 @@
     <script src="/js/navbar.js"></script>
   </head>
   <body>
+    <div class="topNav">
+    </div>
     <h1>Launch number: <span id="launchNumber"></span></h1>
     <br/>
     <h2>Launch site: <span id="launchSiteName"></span</h2>
