--- a/SPACEX/index.html
+++ b/SPACEX/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="topNav">
     </div>
-    <h1>Launch number: <span id="launchNumber"></span></h1>
+    <h1>Launch number: <span id="flightNumber"></span></h1>
     <br/>
     <h2>Launch site: <span id="launchSiteName"></span</h2>
     <br/>
