add rel="noreferrer"  to external links

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                 <h2>Edaz Potato</h2>
                 <span>Youtuber</span>
                 <div class="sm">
-                    <a href="https://www.twitter.com/EdazPotato" target="_blank"><i class="fab fa-twitter"></i></a>
-                    <a href="https://www.youtube.com/channel/UCK1ME1J0XNbN31bCOV9UjKw" target="_blank"><i class="fab fa-youtube"></i></a>
-                    <a href="https://www.github.com/EdazPotato" target="_blank"><i class="fab fa-github"></i></a>
-                    <a href="https://discord.gg/tG2Q333" target="_blank"><i class="fab fa-discord"></i></a>
+                    <a rel="noreferrer" href="https://www.twitter.com/EdazPotato" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a rel="noreferrer" href="https://www.youtube.com/channel/UCK1ME1J0XNbN31bCOV9UjKw" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a rel="noreferrer" href="https://www.github.com/EdazPotato" target="_blank"><i class="fab fa-github"></i></a>
+                    <a rel="noreferrer" href="https://discord.gg/tG2Q333" target="_blank"><i class="fab fa-discord"></i></a>
                 </div>
             </div>
         </div>
