add common meta tags

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="Itr">
   <head data-cast-api-enabled="true">
+      <meta name="author" content="EdazPotato">
+      <meta name="description" content="EdazPotato's offical website!">
+      <meta name="keywords" content="edaz,potato,edazpotato,offical,website,youtube,minecraft,discord,twitter,github,tutorials,coding">
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <meta name="viewport" content="width=device-width,initial-scale=1">
