--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width,initial-scale=1">
       <title>Edaz Potato</title>
       <link rel="stylesheet" href="./style.css" type="text/css"/>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+      <link defer rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
       <!--<script defer src="/assets/fontawsome/js/all.js"></script>-->
       <script defer src="https://kit.fontawesome.com/1d95bbfa9b.js" crossorigin="anonymous"></script>
   </head>
