--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="Itr">
   <head data-cast-api-enabled="true">
+      <meta name="google-site-verification" content="7XUVT0nHj9OHE9_hb4bzQeLxan_eDupguI68VKv1Zqo" />
       <meta name="author" content="EdazPotato">
       <meta name="description" content="EdazPotato's offical website!">
       <meta name="keywords" content="edaz,potato,edazpotato,offical,website,youtube,minecraft,discord,twitter,github,tutorials,coding">
