Add google anylitics

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" dir="Itr">
   <head data-cast-api-enabled="true">
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158683694-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-158683694-1');
+      </script>
       <meta name="google-site-verification" content="7XUVT0nHj9OHE9_hb4bzQeLxan_eDupguI68VKv1Zqo" />
       <meta name="author" content="EdazPotato">
       <meta name="description" content="EdazPotato's offical website!">
