--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Error 404 - File not found!</title>
   </head>
   <body>
@@ -12,7 +12,8 @@
     <hr>
     <p>
       It might have been moved, deleted, on not have existed in the fist place!<br>
-      Try visiting our <a href="/">Home</a> page. If this problem persits, please try contacting me on <a href="twitter.com/EdazPotato"twitter</a>.
+      Try visiting our <a href="/">Home</a> page. If this problem persits, please try contacting me on <a href="twitter.com/EdazPotato">twitter</a>
+      <strong>or</strong> have a poke arround in the <a href="https://github.com/edazpotato/edazpotato.github.io"code</a> and see if you can find the issue.
     </p><br>
     <h1>We're sorry for the inconveince</h1>
   </body>
