--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
     <hr>
     <p>
       It might have been moved, deleted, on not have existed in the fist place!<br>
-      Try visiting our <a href="/">Home</a> page. If this problem persits, please try contacting me on <a href="twitter.com/EdazPotato">twitter</a>
+      Try visiting our <a href="/">Home</a> page. If this problem persits, please try contacting me on <a href="https://twitter.com/EdazPotato">twitter</a>
       <strong>or</strong> have a poke arround in the <a href="https://github.com/edazpotato/edazpotato.github.io"code</a> and see if you can find the issue.
     </p><br>
     <h1>We're sorry for the inconveince</h1>
