--- a/CUBS/index.html
+++ b/CUBS/index.html
@@ -60,6 +60,7 @@
 				  <br/>
 				  <li><a href="#who-am-i">Who am I?</a></li>
 			  </ol>
+			  <a href="#top">Back to top</a>
 			  <div class="spacer"></div>
 			  <h2 id="scavenger-hunt">Scavenger hunt</h2>
 			  <p>
@@ -76,7 +77,7 @@
 				  <br/>
 				  <li>A salt or pepper shaker</li>
 				  <br/>
-				  <li>A musical intremnt</li>
+				  <li>A musical insrument</li>
 				  <br/>
 				  <li>Something that rhymes with <strong>spot</strong></li>
 				  <br/>
@@ -88,9 +89,13 @@
 			  <div class="spacer"></div>
 			  <h2 id="who-am-i">Who am I?</h2>
 			  <p>
-				  In this game, one person leaves the room for 30 seconds. While they are gone everyone agrees on what that person is. 
+				  In this game, one person leaves the room for 30 seconds. 
 				  <br/>
-				  When they come back, everyone is muted and needs to mime to the person what they are. The faster they guess the better.
+				  While they are gone everyone agrees on what that person is, e.g. The person is the <i>Prime Minister</i>.
+				  <br/>
+				  When they come back, everyone is muted and needs to mime to the person what they are. 
+				  <br/>
+				  The faster they guess who they are the better.
 			  </p>
 			  <a href="#top">Back to top</a>
 			  <br/>
