--- a/CUBS/online-week-5.html
+++ b/CUBS/online-week-5.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Cubs</title>
+	<link rel="icon" href="favicon.ico"/>
+    <title>Online Cubs week 5</title>
   	<style type="text/css">
    		.container {
 			width: 100%;
@@ -30,76 +31,82 @@
 		.spacer {
 			height: 700px;
 		}
+		.image-container {
+			height: 250px;
+			background-image: url('scouting-from-home-banner.png');
+			background-repeat: no-repeat;
+			background-size: 802px 250px;
+			background-position: center;
+		}
   	</style>
   </head>
   <body>
 	  <div class="container">
-		  <h1 id="top"><strong>Cubs</strong></h1>
+		  <h1 id="top"><strong>Online Cubs week 5</strong></h1>
+		  <div class="image-container"></div>
 		  <div class="container2">
 			  <hr/>
-			  <h2>Plan:</h2>
+			  <p>
+				  Welcome to the fith week of online Cubs!
+			  </p>
+			  <br/>
+			  <h2 id="plan">This weeks Plan:</h2>
 			  <br/>
 			  <ol>
 				  <li>Flagbreak, Grand howl and catch-up</li>
 				  <br/>
-				  <li>Practise <i>hands-up</i> Zoom feture</li>
-				  <br/>
-				  <li>What have people done since last week?</li>
+				  <li>Which Activity drop things has everone done?</li>
 				  <br/>
 				  <li><a href="#games">Games</a></li>
 				  <br/>
-				  <li>Chat</li>
+				  <li><a href="#acivity-drop">This weeks Activity drop</a></li>
 				  <br/>
 				  <li>Flag down</li>
 			  </ol>
+			  <br/>
 			  <div class="spacer"></div>
 			  <h2 id="games">Games</h2>
 			  <br/>
 			  <ol>
-				  <li><a href="#scavenger-hunt">Scavenger hunt</a></li>
-				  <br/>
-				  <li><a href="#who-am-i">Who am I?</a></li>
+				  <li>Charades</li>
+				   <br/>
+				  <li>Simon says</li>
 			  </ol>
-			  <a href="#top">Back to top</a>
+			  <a href="#plan">Back to plan</a>
 			  <div class="spacer"></div>
-			  <h2 id="scavenger-hunt">Scavenger hunt</h2>
-			  <p>
-				  When I say go, try and find these items:
-				  <br/>
-				  The first person to find them all and <i>put their hand up</i> wins!
-			  </p>
-			  <ul>
-				  <li>A kitchen utensil (e.g. <i>a ladel</i>)</li>
-				  <br/>
-				  <li>Something that starts with <strong>A</strong>, <strong>B</strong> or <strong>C</strong></li>
-				  <br/>
-				  <li>Something that starts with <strong>X</strong>, <strong>Y</strong> or <strong>Z</strong></li>
-				  <br/>
-				  <li>A salt or pepper shaker</li>
-				  <br/>
-				  <li>A musical insrument</li>
-				  <br/>
-				  <li>Something that rhymes with <strong>spot</strong></li>
-				  <br/>
-				  <li>Something that rhymes with <strong>mat</strong></li>
-			  </ul>
-			  <a href="#top">Back to top</a>
+			  <h2 id="acivity-drop">Activity drop!	</h2>
 			  <br/>
-			  <a href="#games">Back to games</a>
+			  <a href="https://drive.google.com/file/d/1JgxdpAC8bHI7lL_1d0YvSzfoVZtIXa6-/view" target="_blank">https://drive.google.com/file/d/1JgxdpAC8bHI7lL_1d0YvSzfoVZtIXa6-/view</a>
+			  <br/>
+			  <p>
+				  This weeks activity drop activities are:
+			  </p>
+			  <ol>
+				  <li>Painting!</li>
+				  <br/>
+				  <li>Make an obsticle course arround your home</li>
+				  <br/>
+				  <li>Participate in the Virtual dawn service for <a href="#anzac-day">ANZAC day</a></li>
+			  </ol>
+			 <a href="#plan">Back to plan</a>
 			  <div class="spacer"></div>
-			  <h2 id="who-am-i">Who am I?</h2>
+			  <h2 id="anzac-day">ANZAC day - Virtual dawn service</h2>
 			  <p>
-				  In this game, one person leaves the room for 30 seconds. 
+				  This year, because of the COVID-19 virus the dawn service cannot be help in the usual way.
 				  <br/>
-				  While they are gone everyone agrees on what that person is, e.g. The person is the <i>Prime Minister</i>.
+				  We can still however remember those who faught for us by participating in the <i>virtual dawn service</i>.
 				  <br/>
-				  When they come back, everyone is muted and needs to mime to the person what they are. 
 				  <br/>
-				  The faster they guess who they are the better.
+				  We can join in with the service at <strong>6am on 25 April</strong> by standing at our letterboxes, front doors and other places while staying within our bubbles.
+				  <br/>
+				  Then we can tune into the service on the <i>RNZ NATIONAL</i> radio station or the <i>online live stream</i>.
+				  <br/>
+				  <br/>
+				  <strong>We will remember them</strong>
 			  </p>
-			  <a href="#top">Back to top</a>
+			  <a href="#plan">Back to plan</a>
 			  <br/>
-			  <a href="#games">Back to games</a>
+			  <a href="#acivity-drop">Back to Activity drop</a>
 			  <div class="spacer"></div>
 		  </div>
 	  </div>
