--- a/CUBS/online-week-4.html
+++ b/CUBS/online-week-4.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" href="favicon.ico"/>
     <meta charset="UTF-8">
     <title>Cubs</title>
   	<style type="text/css">
@@ -30,11 +31,19 @@
 		.spacer {
 			height: 700px;
 		}
+		.image-container {
+			height: 250px;
+			background-image: url('scouting-from-home-banner.png');
+			background-repeat: no-repeat;
+			background-size: 802px 250px;
+			background-position: center;
+		}
   	</style>
   </head>
   <body>
 	  <div class="container">
 		  <h1 id="top"><strong>Cubs</strong></h1>
+		  <div class="image-container"></div>
 		  <div class="container2">
 			  <hr/>
 			  <h2>Plan:</h2>
