--- a/CUBS/online-week-5.html
+++ b/CUBS/online-week-5.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-	<link rel="icon" href="favicon.ico"/>
+    <link rel="icon" href="favicon.ico"/>
     <title>Online Cubs week 5</title>
   	<style type="text/css">
    		.container {
@@ -45,6 +45,7 @@
 		  <h1 id="top"><strong>Online Cubs week 5</strong></h1>
 		  <div class="image-container"></div>
 		  <div class="container2">
+			  <a href="/cubs/">Back to home page</a><br/>
 			  <hr/>
 			  <p>
 				  Welcome to the fith week of online Cubs!
