--- a/CUBS/online-week-5.html
+++ b/CUBS/online-week-5.html
@@ -45,7 +45,7 @@
 		  <h1 id="top"><strong>Online Cubs week 5</strong></h1>
 		  <div class="image-container"></div>
 		  <div class="container2">
-			  <a href="/cubs/">Back to home page</a><br/>
+			  <a href="/CUBS/">Back to home page</a><br/>
 			  <hr/>
 			  <p>
 				  Welcome to the fith week of online Cubs!
