--- a/CUBS/online-week-4.html
+++ b/CUBS/online-week-4.html
@@ -45,7 +45,7 @@
 		  <h1 id="top"><strong>Cubs</strong></h1>
 		  <div class="image-container"></div>
 		  <div class="container2">
-			  <a href="/cubs/">Back to home page</a><br/>
+			  <a href="/CUBS/">Back to home page</a><br/>
 			  <hr/>
 			  <h2>Plan:</h2>
 			  <br/>
