--- a/CUBS/online-week-5.html
+++ b/CUBS/online-week-5.html
@@ -48,7 +48,7 @@
 			  <a href="/CUBS/">Back to home page</a><br/>
 			  <hr/>
 			  <p>
-				  Welcome to the fith week of online Cubs!
+				  Welcome to the fifth week of online Cubs!
 			  </p>
 			  <br/>
 			  <h2 id="plan">This weeks Plan:</h2>
