--- a/404.html
+++ b/404.html
@@ -7,14 +7,13 @@
     <title>Error 404 - File not found!</title>
   </head>
   <body>
-    <h1>We seem to have hit a snag!</h1><br>
-    <h3>We weren't able to find the file you were looking for!</h3>
-    <hr>
+    <h1>ERROR 404 - File not found!</h1>
+    <br/>
     <p>
-      It might have been moved, deleted, on not have existed in the fist place!<br>
-      Try visiting our <a href="/">Home</a> page. If this problem persits, please try contacting me on <a href="https://twitter.com/EdazPotato">twitter</a>
-      <strong>or</strong> have a poke arround in the <a href="https://github.com/edazpotato/edazpotato.github.io"code</a> and see if you can find the issue.
-    </p><br>
-    <h1>We're sorry for the inconveince</h1>
-  </body>
+      It seems like the file you're looking for does not exist.<br/>
+      The file might have been moved, or there might be a broken link somewere.<br/>
+      If you're sure that this shoulden't be happening, open a issue <a href="https://github.com/edazpotato/edazpotato.github.io/">here</a>.
+    </p>
+    <br/>
+    <h3>Try going to the <a href="/">home page</a> and looking for the file again</h3>
 </html>
