--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="Itr">
   <head>
-      <script src="particles.js"></script>
+    <script src="particles.js"></script>
+    <Style>
+      html, body {
+        width: 100%;
+        height: 100%;
+      }
+      body {
+        background-color: #cc0404;
+        backgrond-size: cover;
+        background-position: 50%, 50%;
+        background-repeat: no-repeat;
+      }
+    </style>
   </head>
   <body>
     <div id="particlesJS"></div>
