--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Edazpotato!</title>
+    <meta name="description" content="Edazpotato's official website. I host all my junk on here as well. Follow me on twitter @Edazpotato">
+    <meta name="keywords" content="Edazpotato, edaz, potato, minecraft, datapacks, mods, web, developer">
+    <meta name="robots" content="index, follow">
+    <meta name="copyright" content="MIT">
+    <meta name="language" content="EN">
+    <meta name="author" content="@Edazpotato">
+    <meta name="creationdate" content="Tomorrow">
+    <meta name="distribution" content="global">
+    <meta name="rating" content="kids">
     <script src="particles.js"></script>
     <!-- css "borrowed" from Ravy https://i-love.pink -->
     <Style>
