--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- meta tags -->
     <title>Edazpotato!</title>
+    <meta name="title" content="Edazpotato's Official website! No Scam! 100% Safe! No virus or IP log!">
     <meta name="description" content="Edazpotato's official website. I host all my junk on here as well. Follow me on twitter @Edazpotato">
     <meta name="keywords" content="Edazpotato, edaz, potato, minecraft, datapacks, mods, web, developer">
     <meta name="robots" content="index, follow">
@@ -11,8 +13,22 @@
     <meta name="creationdate" content="Tomorrow">
     <meta name="distribution" content="global">
     <meta name="rating" content="kids">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://metatags.io/">
+    <meta property="og:title" content="Edazpotato's Official website! No Scam! 100% Safe! No virus or IP log!">
+    <meta property="og:description" content="Edazpotato's official website! This is where I'll host all of my junk and test out things and stuff. Follow me on twitter @Edazpotato">
+    <meta property="og:image" content="https://edazpotato.github.io/images/lightsabre.jpg">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://metatags.io/">
+    <meta property="twitter:title" content="Edazpotato's Official website! No Scam! 100% Safe! No virus or IP log!">
+    <meta property="twitter:description" content="Edazpotato's official website! This is where I'll host all of my junk and test out things and stuff. Follow me on twitter @Edazpotato">
+    <meta property="twitter:image" content="https://edazpotato.github.io/images/lightsabre.jpg">
+    
+    <!-- particles.js -->
     <script src="particles.js"></script>
-    <!-- css "borrowed" from Ravy https://i-love.pink -->
+    <!-- css -->
     <Style>
       body {
         width: 100%;
