--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <meta name="rating" content="kids">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://metatags.io/">
+    <meta property="og:url" content="https://edazpotato.github.io">
     <meta property="og:title" content="Edazpotato's Official website! No Scam! 100% Safe! No virus or IP log!">
     <meta property="og:description" content="Edazpotato's official website! This is where I'll host all of my junk and test out things and stuff. Follow me on twitter @Edazpotato">
-    <meta property="og:image" content="https://edazpotato.github.io/images/lightsabre.jpg">
+    <meta property="og:image" content="https://edazpotato.github.io/images/lightsabre.jpeg">
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://metatags.io/">
+    <meta property="twitter:url" content="https://edazpotato.github.io">
     <meta property="twitter:title" content="Edazpotato's Official website! No Scam! 100% Safe! No virus or IP log!">
     <meta property="twitter:description" content="Edazpotato's official website! This is where I'll host all of my junk and test out things and stuff. Follow me on twitter @Edazpotato">
-    <meta property="twitter:image" content="https://edazpotato.github.io/images/lightsabre.jpg">
+    <meta property="twitter:image" content="https://edazpotato.github.io/images/lightsabre.jpeg">
     
     <!-- particles.js -->
     <script src="particles.js"></script>
